--- a/.github/workflows/latexx-build-and-release.yml
+++ b/.github/workflows/latexx-build-and-release.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: thesis.pdf
-          path: main.pdf
+          path: thesis.pdf
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
@@ -32,6 +32,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} 
-          asset_path: main.pdf
+          asset_path: thesis.pdf
           asset_name: thesis.pdf
           asset_content_type: application/pdf
